--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npx chrome-aws-lambda install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.7",
-    "puppeteer": "^23.11.1",
-    "puppeteer-core": "^23.11.1",
+    "puppeteer-core": "^10.4.0",
     "telegraf": "^4.16.3"
   }
 }
