--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "postinstall": "npx puppeteer install"
   },
   "dependencies": {
-    "puppeteer": "^21.0.0",
-    "telegraf": "^4.12.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "puppeteer": "^23.11.1",
+    "telegraf": "^4.12.2"
   }
 }
